@@ -1,52 +1,53 @@
 package com.gobang.gobang.domain.personal.dto.response;
 
-import com.gobang.gobang.domain.image.entity.Image;
-import com.gobang.gobang.domain.image.repository.ImageRepository;
 import com.gobang.gobang.domain.product.entity.Product;
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
+import lombok.Getter;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Data
 @AllArgsConstructor
+@Builder
 public class RecommendResponse {
 
     private List<Item> items;
     private String aiMessage;
 
-    @Data
+    @Getter
     @AllArgsConstructor
     public static class Item {
         private Long productId;
-        private String productName;
+        private String name;
+        private Integer price;
         private String imageUrl;
-        private int price;
     }
 
-    public static RecommendResponse from(List<Product> products, String aiMessage, ImageRepository imageRepository) {
+    public static RecommendResponse from(
+            List<Product> products,
+            String aiMessage,
+            Map<Long, String> imageMap
+    ) {
+        List<Item> items = products.stream()
+                .map(product -> {
+                    String fileName = imageMap.get(product.getId());
 
-        List<Item> itemList = products.stream()
-                .map(p -> {
-
-                    // 각 상품마다 이미지 1개씩 가져오기
-                    String imageUrl = imageRepository
-                            .findByRefTypeAndRefIdOrderBySortOrderAsc(Image.RefType.PRODUCT, p.getId())
-                            .stream()
-                            .findFirst()
-                            .map(img -> "/images/" + img.getImageFileName())
-                            .orElse(null);
+                    String imageUrl = (fileName != null)
+                            ? "/images/" + fileName    // ⇒ 여기서만 URL 조립
+                            : "/images/default-product.png";
 
                     return new Item(
-                            p.getId(),
-                            p.getName(),
-                            imageUrl,
-                            p.getBasePrice()
+                            product.getId(),
+                            product.getName(),
+                            product.getBasePrice(),
+                            imageUrl
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        return new RecommendResponse(itemList, aiMessage);
+        return new RecommendResponse(items, aiMessage);
     }
 }
